# transfer_function

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh
.github/workflows/: UnitTests.yml
cmake/: code_coverage.cmake  cppcheck.cmake  cpplint.cmake
components/: CMakeLists.txt
components/c2d/: CMakeLists.txt
components/c2d/include/: polynomial_discretizer.hpp  polynomial_fraction.hpp  transfer_function_discretizer.hpp
components/c2d/src/: polynomial_discretizer.cpp  polynomial_fraction.cpp  polynomial_fraction.hpp
components/frequency_analysis/: CMakeLists.txt
components/frequency_analysis/include/: complex.hpp  complex_transfer_function.hpp
components/frequency_analysis/src/: complex.cpp  complex.hpp  complex_transfer_function.cpp
components/polynomial/: CMakeLists.txt
components/polynomial/include/: polynomial.hpp
components/polynomial/src/: polynomial.cpp
components/simulation/include/: discrete_simulator.hpp
components/simulation/src/: discrete_simulator.cpp
components/tf/: CMakeLists.txt
components/tf/include/: core_transfer_function.hpp
examples/: CMakeLists.txt  example.cpp
include/: discretization_method.hpp  transfer_function.hpp
src/: transfer_function.cpp
tests/: CMakeLists.txt  discretizer_tests.cpp  frequency_analysis_tests.cpp  polynomial_tests.cpp  transfer_function_tests.cpp
